; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ppbus/extr_pcfclock.c_pcfclock_read.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ppbus/extr_pcfclock.c_pcfclock_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cdev = type { %struct.pcfclock_data* }
%struct.pcfclock_data = type { i32 }
%struct.uio = type { i32 }

@ERANGE = common dso_local global i32 0, align 4
@PCFCLOCK_MAX_RETRIES = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"no PCF found\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cdev*, %struct.uio*, i32)* @pcfclock_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pcfclock_read(%struct.cdev* %0, %struct.uio* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.cdev*, align 8
  %6 = alloca %struct.uio*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.pcfclock_data*, align 8
  %9 = alloca i32, align 4
  %10 = alloca [18 x i8], align 16
  %11 = alloca i32, align 4
  store %struct.cdev* %0, %struct.cdev** %5, align 8
  store %struct.uio* %1, %struct.uio** %6, align 8
  store i32 %2, i32* %7, align 4
  %12 = load %struct.cdev*, %struct.cdev** %5, align 8
  %13 = getelementptr inbounds %struct.cdev, %struct.cdev* %12, i32 0, i32 0
  %14 = load %struct.pcfclock_data*, %struct.pcfclock_data** %13, align 8
  store %struct.pcfclock_data* %14, %struct.pcfclock_data** %8, align 8
  store i32 0, i32* %11, align 4
  %15 = load %struct.uio*, %struct.uio** %6, align 8
  %16 = getelementptr inbounds %struct.uio, %struct.uio* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = icmp slt i32 %17, 18
  br i1 %18, label %19, label %21

19:                                               ; preds = %3
  %20 = load i32, i32* @ERANGE, align 4
  store i32 %20, i32* %4, align 4
  br label %50

21:                                               ; preds = %3
  %22 = load %struct.pcfclock_data*, %struct.pcfclock_data** %8, align 8
  %23 = getelementptr inbounds %struct.pcfclock_data, %struct.pcfclock_data* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @device_get_parent(i32 %24)
  store i32 %25, i32* %9, align 4
  %26 = load i32, i32* %9, align 4
  %27 = call i32 @ppb_lock(i32 %26)
  %28 = load %struct.cdev*, %struct.cdev** %5, align 8
  %29 = getelementptr inbounds [18 x i8], [18 x i8]* %10, i64 0, i64 0
  %30 = load i32, i32* @PCFCLOCK_MAX_RETRIES, align 4
  %31 = call i32 @pcfclock_read_dev(%struct.cdev* %28, i8* %29, i32 %30)
  store i32 %31, i32* %11, align 4
  %32 = load i32, i32* %9, align 4
  %33 = call i32 @ppb_unlock(i32 %32)
  %34 = load i32, i32* %11, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %41

36:                                               ; preds = %21
  %37 = load %struct.pcfclock_data*, %struct.pcfclock_data** %8, align 8
  %38 = getelementptr inbounds %struct.pcfclock_data, %struct.pcfclock_data* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = call i32 @device_printf(i32 %39, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  br label %48

41:                                               ; preds = %21
  %42 = load %struct.cdev*, %struct.cdev** %5, align 8
  %43 = getelementptr inbounds [18 x i8], [18 x i8]* %10, i64 0, i64 0
  %44 = call i32 @pcfclock_display_data(%struct.cdev* %42, i8* %43)
  %45 = getelementptr inbounds [18 x i8], [18 x i8]* %10, i64 0, i64 0
  %46 = load %struct.uio*, %struct.uio** %6, align 8
  %47 = call i32 @uiomove(i8* %45, i32 18, %struct.uio* %46)
  br label %48

48:                                               ; preds = %41, %36
  %49 = load i32, i32* %11, align 4
  store i32 %49, i32* %4, align 4
  br label %50

50:                                               ; preds = %48, %19
  %51 = load i32, i32* %4, align 4
  ret i32 %51
}

declare dso_local i32 @device_get_parent(i32) #1

declare dso_local i32 @ppb_lock(i32) #1

declare dso_local i32 @pcfclock_read_dev(%struct.cdev*, i8*, i32) #1

declare dso_local i32 @ppb_unlock(i32) #1

declare dso_local i32 @device_printf(i32, i8*) #1

declare dso_local i32 @pcfclock_display_data(%struct.cdev*, i8*) #1

declare dso_local i32 @uiomove(i8*, i32, %struct.uio*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
